# tree-sitter-crystal

./: .clang-format  .eslintrc.js  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  install-tree-sitter.sh
bindings/c/: tree-sitter-crystal.h  tree-sitter-crystal.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_crystal/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCrystalTests/: TreeSitterCrystalTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  unicode.c
test/: stdlib_coverage  stdlib_coverage_expected_to_fail.txt
test/corpus/: errors.txt  expressions.txt  literals.txt  statements.txt  types.txt
