[package]
name = "tree-sitter-crystal"
description = "Crystal grammar for tree-sitter"
version = "0.0.1"
authors = ["Gabriel Holodak <gthepiper@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "crystal"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/keidax/tree-sitter-crystal"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
